# thop

./: .clinerules  .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PRD.md  PROGRESS.md  README.md  RESEARCH.md  TODO.md  go.mod  go.sum
.claude/: README.md  thop-plugin.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
.opencode/: README.md  opencode.json
.opencode/plugins/: thop.ts
cmd/thop/: main.go
debian/: control  copyright  rules
docs/: AGENT_README.md  MCP.md  MCP_IMPROVEMENTS.md  MCP_PROMPTS.md  MCP_SESSION_SUMMARY.md  THOP_FOR_AGENTS.md  THOP_FOR_CLAUDE.md
internal/cli/: app_test.go  completions_test.go  interactive.go  interactive_test.go  mcp.go
internal/config/: config.go
internal/logger/: logger.go  logger_test.go
internal/mcp/: errors.go  errors_test.go  handlers.go  protocol.go  server.go  server_test.go  tools.go
internal/restriction/: restriction_test.go
internal/session/: local.go  local_test.go  manager.go  manager_test.go  ssh.go  ssh_test.go
internal/sshconfig/: sshconfig.go  sshconfig_test.go
internal/state/: state.go  state_test.go
test/docker/: Dockerfile.sshd  (+1 more)
thop-go/: .gitignore  Makefile  go.mod  go.sum
thop-rust/: .gitignore  Cargo.toml  Makefile
thop-rust/src/: error.rs  logger.rs  main.rs  restriction.rs  sshconfig.rs
thop-rust/src/cli/: interactive.rs  mod.rs  proxy.rs
thop-rust/src/config/: mod.rs
thop-rust/src/mcp/: errors.rs  handlers.rs  mod.rs  protocol.rs  server.rs  tools.rs
thop-rust/src/session/: local.rs  manager.rs  mod.rs  ssh.rs
thop-rust/src/state/: mod.rs
(+31 files in other folders)
